--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@reduxjs/toolkit": "^2.6.1",
     "atropos": "^2.0.2",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.483.0",
-    "next": "15.2.3",
+    "next": "^15.3.4",
     "next-redux-wrapper": "^8.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/axios": "^0.9.36",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
